# wnja

./: .gitignore  CLAUDE.md  README.md  build_wnja.py  detect_sahen.py  pyproject.toml  report_wnja.py  run_dev_eval.sh  tweak_wnja.py
audit/: PLAN.md  cli.py  db.py  dev.py  dev_set.tsv  llm.py  loader.py  report.py  review.py  tokenizer.py  web_lookup.py
audit/checks/: definitions.py  examples.py  lemmas.py
corrections/: README.md  definitions.tsv
data/: sahen_verbs.txt
docs/: contents.en.html  contents.ja.html  index.en.html  index.ja.html  license.txt
docs/eng/: bib.html  downloads.html  index.html  links.html  news.html
docs/jpn/: bib.html  detail.html  downloads.html  index.html  links.html
tests/: test_audit.py  test_wnja.py
