[project]
name = "wnja"
version = "2.0"
description = "Japanese WordNet build scripts"
dynamic = []
requires-python = ">=3.10"
authors = [
    { name = "Francis Bond", email = "bond@ieee.org" },
]
dependencies = [
    "wn>=1.0.0",
    "wn_edit",
    "jamdict>=0.1a11",
    "jamdict_data>=1.5",
    "pytest>=7.0",
    "tomli-w>=1.0",
    "fugashi>=1.3",
    "unidic-lite>=1.0",
]

[tool.uv.sources]
wn_edit = { git = "https://github.com/bond-lab/wn_edit" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
